--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,27 @@ main{
   margin: 0 auto;
   text-align: center;
 }
+
+button{
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.8);
+  border: 0;
+  display: inline-block;
+  width: 20%;
+  cursor: pointer;
+}
+
+button.with-text{
+  width: auto;
+  background-color:rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 1.4rem;
+  line-height: 36px;
+  
+}
+button.with-text svg{
+  width: 36px;
+  margin-right: 5px;
+  float: left;
+}
